implemented feedback and refactored code and optimized tests